@@ -2,7 +2,7 @@
 <object name="Assessment"
         meta_type="Factory-based Type Information with dynamic views"
         xmlns:i18n="http://xml.zope.org/namespaces/i18n">
-   
+
  <property name="title">Indicator Assessment</property>
  <property name="description"></property>
  <property name="content_icon">Assessment.png</property>
@@ -26,27 +26,27 @@
  <alias from="edit" to="edit_aggregated"/>
  <alias from="properties" to="base_metadata"/>
  <alias from="sharing" to="folder_localrole_form"/>
- <action title="View" 
+ <action title="View"
          action_id="view"
-         category="object" 
+         category="object"
          condition_expr=""
-         url_expr="string:${object_url}/view" 
+         url_expr="string:${object_url}/view"
          visible="True">
   <permission value="View"/>
  </action>
- <action title="Properties" 
+ <action title="Properties"
          action_id="metadata"
-         category="object" 
+         category="object"
          condition_expr=""
-         url_expr="string:${object_url}/properties" 
+         url_expr="string:${object_url}/properties"
          visible="True">
   <permission value="Modify portal content"/>
  </action>
- <action title="Edit" 
+ <action title="Edit"
          action_id="edit"
-         category="object" 
-         
-         url_expr="string:${object_url}/@@edit_aggregated" 
+         category="object"
+
+         url_expr="string:${object_url}/@@edit_aggregated"
          visible="True">
   <permission value="Modify portal content"/>
  </action>
